# Bases-de-datos-2-Proyecto-2

./: 01_transform_data.py  Dockerfile  Documentación Proyecto 2 - Estaban Solano, Pablo Mesén, Daniel Zeas.docx  README.md  analytics.py  docker-compose.yml  neo4j_conn.py  notebook.ipynb  pyproject.toml  transform_data.py
dataset-folder/: 02_CustomerDemographic.csv  03_NewCustomerList.csv  04_Transactions.csv
datasets/: 01_CustomerAddress.csv  04_Transactions.csv
