[tool.poetry]
name = "bases-de-datos-2-proyecto-2"
version = "0.1.0"
description = ""
authors = ["Pablo Mesén <127916341+pablomesen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kaggle = "^1.6.17"
neo4j-driver = "^5.26.0"
pandas = "^2.2.3"
pyspark = "^3.5.3"
findspark = "^2.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
